add httpExceptions and implements getting one last quote