@@ -1,16 +1,17 @@
 package ru.kopranych.rebalancing.service.impl;
 
-import static java.util.stream.Collectors.toList;
-import static org.apache.commons.lang3.ObjectUtils.allNotNull;
+import static ru.kopranych.rebalancing.util.RebalanceCalculator.getAmountDelta;
+import static ru.kopranych.rebalancing.util.RebalanceCalculator.getNetAssetValue;
+import static ru.kopranych.rebalancing.util.RebalanceCalculator.getPositionVolume;
+import static ru.kopranych.rebalancing.util.RebalanceCalculator.getShareDelta;
+import static ru.kopranych.rebalancing.util.RebalanceCalculator.getSharePosition;
+import static ru.kopranych.rebalancing.util.RebalanceCalculator.getVolumeDelta;
 
 import java.math.BigDecimal;
-import java.math.MathContext;
-import java.time.LocalDate;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import ru.kopranych.rebalancing.model.Portfolio;
-import ru.kopranych.rebalancing.model.Position;
 import ru.kopranych.rebalancing.model.RebalancedPortfolio;
 import ru.kopranych.rebalancing.model.RebalancedPosition;
 import ru.kopranych.rebalancing.service.QuoteService;
@@ -25,19 +26,18 @@ public class RebalancingService implements RebalancingPortfolioService {
 
   @Override
   public RebalancedPortfolio rebalancing(final Portfolio portfolio) {
-    final LocalDate now = LocalDate.now().minusDays(4);
     final var updatedPositions = portfolio
         .getPositions()
         .stream()
         .peek(position -> {
-              final var quoteDtoList = quoteServiceImpl.get(position.getTicker(), now, now);
-              final var last = quoteDtoList.isEmpty() ? BigDecimal.valueOf(0) : quoteDtoList.get(0).getLast();
+              final var quote = quoteServiceImpl.get(position.getTicker());
+              final var last = quote.getLast();
               final var positionVolume = getPositionVolume(position.getAmount(), last);
 
               position.setVolume(positionVolume);
               position.setPrice(last);
             }
-        ).collect(toList());
+        ).toList();
 
     final var netAssetValue = getNetAssetValue(new Portfolio(updatedPositions));
     final var rebalancedPositions = updatedPositions.stream()
@@ -56,64 +56,9 @@ public class RebalancingService implements RebalancingPortfolioService {
               .ticker(position.getTicker())
               .build();
         })
-        .collect(toList());
+        .toList();
 
     return new RebalancedPortfolio(rebalancedPositions);
   }
 
-  private BigDecimal getSharePosition(
-      final BigDecimal netAssetValue, final BigDecimal positionVolume
-  ) {
-    if (isNotValidArguments(netAssetValue, positionVolume, "getSharePosition")) {
-      return BigDecimal.ZERO;
-    }
-    if (BigDecimal.ZERO.compareTo(netAssetValue) == 0) {
-      log.warn("The divisior is ZERO");
-      return BigDecimal.ZERO;
-    }
-    return positionVolume.divide(netAssetValue, MathContext.DECIMAL64);
-  }
-
-  private BigDecimal getPositionVolume(final BigDecimal amount, final BigDecimal price) {
-    if (isNotValidArguments(amount, price, "getPositionVolume")) {
-      return BigDecimal.ZERO;
-    }
-    return amount.multiply(price);
-  }
-
-  private BigDecimal getNetAssetValue(Portfolio portfolio) {
-    return portfolio.getPositions()
-        .stream()
-        .map(Position::getVolume)
-        .reduce(BigDecimal::add)
-        .orElseGet(() -> {
-          log.warn("Empty positions volumes");
-          return BigDecimal.ZERO;
-        });
-  }
-
-  private BigDecimal getShareDelta(final BigDecimal targetShare, final BigDecimal currentShare) {
-    return targetShare.subtract(currentShare);
-  }
-
-  private BigDecimal getVolumeDelta(final BigDecimal shareDelta, final BigDecimal netAssetValue) {
-    return shareDelta.multiply(netAssetValue);
-  }
-
-  private BigDecimal getAmountDelta(final BigDecimal volumeDelta, final BigDecimal price) {
-    return volumeDelta.divide(price, MathContext.DECIMAL64);
-  }
-
-  private boolean isNotValidArguments(
-      final BigDecimal arg1, final BigDecimal arg2, final String methodName
-  ) {
-    if (!allNotNull(arg1, arg2)) {
-      log.warn(
-          "Any of arguments [arg1 {}, arg2 {}] is null for calculated method {}", arg1, arg2,
-          methodName
-      );
-      return true;
-    }
-    return false;
-  }
 }
